@@ -1,6 +1,10 @@
+Build.PL
 Changes
 Contingency.pm
 INSTALL
-MANIFEST			This list of files
 Makefile.PL
+MANIFEST			This list of files
+META.yml
 t/01-basic.t
+README
+SIGNATURE    Added here by Module::Build
