@@ -1,0 +1,21 @@
+---
+name: Statistics-Contingency
+version: 0.07
+author:
+  - 'Ken Williams <kwilliams@cpan.org>'
+abstract: 'Calculate precision, recall, F1, accuracy, etc.'
+license: perl
+resources:
+  license: http://dev.perl.org/licenses/
+requires:
+  Params::Validate: 0.23
+build_requires:
+  Test: 0
+provides:
+  Statistics::Contingency:
+    file: Contingency.pm
+    version: 0.07
+generated_by: Module::Build version 0.280801
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
