@@ -1,30 +1,15 @@
-
+# Note: this file was auto-generated by Module::Build::Compat version 0.2808_01
 use ExtUtils::MakeMaker;
-
-my $module = 'Statistics::Contingency';
-my ($name, $dir);
-($name = $module) =~ s/.*::(\w+)/$1.pm/;
-($dir  = $module) =~ s/::/-/g;
-
 WriteMakefile
-  (
-   'NAME'       => $module,
-   'VERSION_FROM' => $name, # finds $VERSION
-   'dist' => { COMPRESS=>"gzip",
-               SUFFIX=>"gz",
-               PREOP=>('rm -f README; '.
-                       "pod2text -80 < $name > README; ".
-                       "cp -f README $dir-\$(VERSION); "
-                      ),
-             },
-   # 'clean' => {FILES => "t/httpd.conf t/error_log t/httpd"},
-   'PREREQ_PM' => {
-		   Params::Validate => '0.23',
-		  },
-   ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
-    (ABSTRACT_FROM => $name, # retrieve abstract from module
-     AUTHOR     => 'Ken Williams <ken@mathforum.org>') : 
-    ()
-   ),
-  );
-
+(
+          'NAME' => 'Statistics::Contingency',
+          'VERSION_FROM' => 'Contingency.pm',
+          'PREREQ_PM' => {
+                           'Params::Validate' => '0.23',
+                           'Test' => '0'
+                         },
+          'INSTALLDIRS' => 'site',
+          'EXE_FILES' => [],
+          'PL_FILES' => {}
+        )
+;
