@@ -1,0 +1,32 @@
+This file contains message digests of all files listed in MANIFEST,
+signed via the Module::Signature module, version 0.55.
+
+To verify the content in this distribution, first make sure you have
+Module::Signature installed, then type:
+
+    % cpansign -v
+
+It will check each file's integrity, as well as the signature's
+validity.  If "==> Signature verified OK! <==" is not displayed,
+the distribution may already have been compromised, and you should
+not run its Makefile.PL or Build.PL.
+
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+SHA1 5220358872a43af2b1a519f34a678eda548fa9bd Build.PL
+SHA1 7b8c101a9e8b5c02799da02e384f1c5bf57a9379 Changes
+SHA1 321809b3ff093cdd618bc8583773c97d948d66b9 Contingency.pm
+SHA1 950227ef6d7a1b3572bac3cd9b6f03c58a5f4588 INSTALL
+SHA1 b57feb4127f93a93b82fcc62ad1e36a0f582cb0b MANIFEST
+SHA1 686f64a38d50b61f6338c9a4f9f617d694214531 META.yml
+SHA1 bfec2b1e07a5b23a6fbbeafc8952f8495179ac67 Makefile.PL
+SHA1 3028104edffbd3d2b5c4d017e73a5d9cf0f35194 README
+SHA1 2bfa27fdd6b9ac4793508ddd45434408a86c925e t/01-basic.t
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (Darwin)
+
+iD8DBQFITy2sgrvMBLfvlHYRAuAoAJ9YIXU8D89MiHMaJG1Hi8AiiT7oYgCfeked
+shYegMBC0+5DEJ4pEEPgVao=
+=A5JV
+-----END PGP SIGNATURE-----
